// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Table.ColGroup allowTags=undefined 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup checkGrammar=false 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup checkGrammar=true 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup checkHighlight=false 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup checkHighlight=true 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup checkSpaces=false 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup checkSpaces=true 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup className="my-classname" 1`] = `
<colgroup
  className="uu5-bricks-table-col-group my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema="brown" 1`] = `
<colgroup
  className="color-schema-brown uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema="brown-rich" 1`] = `
<colgroup
  className="color-schema-brown-rich uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema="cyan" 1`] = `
<colgroup
  className="color-schema-cyan uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema="cyan-rich" 1`] = `
<colgroup
  className="color-schema-cyan-rich uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema="default" 1`] = `
<colgroup
  className="color-schema-default uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema="green" 1`] = `
<colgroup
  className="color-schema-green uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema="green-rich" 1`] = `
<colgroup
  className="color-schema-green-rich uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema="grey" 1`] = `
<colgroup
  className="color-schema-grey uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema="grey-rich" 1`] = `
<colgroup
  className="color-schema-grey-rich uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema="orange" 1`] = `
<colgroup
  className="color-schema-orange uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema="orange-rich" 1`] = `
<colgroup
  className="color-schema-orange-rich uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema="pink" 1`] = `
<colgroup
  className="color-schema-pink uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema="pink-rich" 1`] = `
<colgroup
  className="color-schema-pink-rich uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema="purple" 1`] = `
<colgroup
  className="color-schema-purple uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema="purple-rich" 1`] = `
<colgroup
  className="color-schema-purple-rich uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema="red" 1`] = `
<colgroup
  className="color-schema-red uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema="red-rich" 1`] = `
<colgroup
  className="color-schema-red-rich uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema="yellow" 1`] = `
<colgroup
  className="color-schema-yellow uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema="yellow-rich" 1`] = `
<colgroup
  className="color-schema-yellow-rich uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup content="This is Content from ContentMixin" 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup content=12345 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup controlled=false 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup controlled=true 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup default props 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup disabled=false 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup disabled=true 1`] = `
<colgroup
  className="uu5-bricks-table-col-group uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup docKit examples props-allowTags 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID1"
  style={Object {}}
  title={null}
>
  <Header
    content="Table"
    id="uuID1-header"
    key="uuID1-header"
    underline={false}
  />
  <table
    className="uu5-bricks-table-table"
  >
    <table-col-group
      allowTags={
        Array [
          "UU5.Example.MyColumnComponent",
        ]
      }
      id="uuIDGroup"
      key="uuIDGroup"
    >
      <MyColumnComponent
        id="myIDs"
      />
      <TableCol
        colorSchema="red"
        id="uuIDlast"
        span={2}
      />
    </table-col-group>
    <table-thead
      id="uuID2"
      key="uuID2"
    >
      <table-tr
        id="uuID3"
      >
        <table-th
          content="Name"
          id="uuID4"
        />
        <table-th
          content="Rank"
          id="uuID5"
        />
        <table-th
          content="Promotion prospects"
          id="uuID5"
        />
      </table-tr>
    </table-thead>
  </table>
  <Footer
    content="Table footer"
    id="uuID1-footer"
    key="uuID1-footer"
  />
</div>
`;

exports[`UU5.Bricks.Table.ColGroup dynamic=false 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup dynamic=true 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup hidden=false 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup hidden=true 1`] = `
<colgroup
  className="uu5-bricks-table-col-group uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup id="myId" 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup ignoreHTML=false 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup ignoreHTML=true 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup mainAttrs=undefined 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup name="myName" 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup nestingLevel="bigBox" 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup nestingLevel="bigBoxCollection" 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup nestingLevel="box" 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup nestingLevel="boxCollection" 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup nestingLevel="container" 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup nestingLevel="inline" 1`] = `""`;

exports[`UU5.Bricks.Table.ColGroup nestingLevel="page" 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup nestingLevel="smallBox" 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup nestingLevel="smallBoxCollection" 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup nestingLevel="spa" 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup noIndex=false 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup noIndex=true 1`] = `
<colgroup
  className="uu5-bricks-table-col-group uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup props-allowTags 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <Header
    content="Table"
    id="uuID01-header"
    key="uuID01-header"
    underline={false}
  />
  <table
    className="uu5-bricks-table-table"
  >
    <table-col-group
      id="uuID02"
      key="uuID02"
    >
      <TableCol
        id="uuID03"
      />
      <MyColumnComponent
        id="allowID"
      />
    </table-col-group>
    <table-thead
      id="uuID04"
      key="uuID04"
    >
      <table-tr
        id="uuID05"
      >
        <table-th
          content="Name"
          id="uuID06"
        />
        <table-th
          content="Rank"
          id="uuID07"
        />
        <table-th
          content="Promotion prospects"
          id="uuID08"
        />
      </table-tr>
    </table-thead>
  </table>
</div>
`;

exports[`UU5.Bricks.Table.ColGroup pureRender=false 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup pureRender=true 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup selected=false 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup selected=true 1`] = `
<colgroup
  className="uu5-bricks-table-col-group uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup style="padding:8px; borderRadius: 2px" 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup style={"backgroundColor":"red","color":"blue"} 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup textCorrector=false 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup textCorrector=true 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup tooltip="My Tooltip" 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
